# quote

./: Cargo.toml  README.md  tickers.txt
src/: lib.rs  quote.rs
src/client/: error.rs  mod.rs
src/server/: error.rs  mod.rs
