[package]
name = "quoteapp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
rand = "0.9"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "server"
path = "src/bin/server.rs"
